--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
 .App {
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
