--- a/src/CRT.scss
+++ b/src/CRT.scss
@@ -27,7 +27,7 @@ body {
   margin-top: 10px;
   position: relative;
   overflow: hidden;
-  // border: 2px solid #666;
+  border: 2px solid rgb(58, 58, 58);
 
   // flicker
   &::after {
@@ -169,11 +169,12 @@ body {
   top: 20px;
   left: 20px;
   font-size: 60px;
-  //text-shadow:2px 2px black,-2px -2px black, -2px 2px black, 2px -2px black;
+  // text-shadow: 2px 2px black, -2px -2px black, -2px 2px black, 2px -2px black;
   visibility: hidden;
   pointer-events: none;
 }
-.Monitor .Overlay {
+
+.OverlayOn {
   animation: overlay-anim 5s linear;
   animation-fill-mode: forwards;
 }
