Set overlay with hooks

--- a/src/CRT.scss
+++ b/src/CRT.scss
@@ -170,7 +170,7 @@ body {
   left: 20px;
   font-size: 60px;
   // text-shadow: 2px 2px black, -2px -2px black, -2px 2px black, 2px -2px black;
-  visibility: hidden;
+  // visibility: hidden;
   pointer-events: none;
 }
 
